--- a/inicio.css
+++ b/inicio.css
@@ -51,6 +51,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  margin-top: 20px; 
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transform: translateZ(-30vw) rotateY(0);
