--- a/css/Catalogo.css
+++ b/css/Catalogo.css
@@ -1,6 +1,6 @@
 img {
     margin-left: 20%;
-    width: 250px;
+    width: 200px;
     height: 250px;
 }
 .row {
@@ -10,6 +10,6 @@ img {
 }
 .col-12 {
     display: flex;
-   
+    margin-bottom: 4%;
 }
 
