--- a/css/producto.css
+++ b/css/producto.css
@@ -1,5 +1,6 @@
 #algo{
     border: solid rgb(187, 255, 0) 2px;
+    background: #edecec;
 }
 #imagen{
     border: solid rgba(128, 0, 64, 0.87) 2px;
