--- a/css/Catalogo.css
+++ b/css/Catalogo.css
@@ -5,11 +5,13 @@ img {
 }
 .row {
     width: 100%;
-    margin-top: 8%;
-    margin-left: 5%;
+margin-top: 5%;
 }
 .col-12 {
     display: flex;
     margin-bottom: 4%;
+}
+#texto {
+    width: 200px;
 }
 
