--- a/css/Catalogo.css
+++ b/css/Catalogo.css
@@ -14,4 +14,9 @@ margin-top: 5%;
 #texto {
     width: 200px;
 }
-
+#formulario {
+    color: white;
+    background: linear-gradient(45deg, #148F77 45%, #1b1e21 48%);
+    margin-top: 3%;
+    text-align: center;
+}
